modules/webapp_alb_security_group/main.tf
resource "aws_security_group" "webapp_alb_sg" {
  name        = var.webapp_alb_sg_name
  description = "Security group for ALB"
  vpc_id      = var.vpc_id

  # Allow inbound HTTP
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Allow inbound HTTPS
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Allow all outbound traffic
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = var.webapp_alb_sg_name
  }
}
